--- a/src/app/lugares/lugares.component.html
+++ b/src/app/lugares/lugares.component.html
@@ -1,33 +1,40 @@
 <div class="container">
-  <h2 class="h2">Localización</h2>
-  <agm-map [latitude]="lat" [longitude]="lng" [zoom]= "10">
-  <!--<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>-->
-  <agm-marker *ngFor="let lugar of lugares" [latitude]="lugar.lat" [longitude]="lugar.lng"></agm-marker>
-</agm-map>
-<hr />
-  <div class="row">
-    <div class="col-md-8" id="container">
-      <div class="col-md-12" id="container">
-        <div class="col-md-5">
-          <h2>Lugares Cercanos</h2>
+  <div class="row transparent">
+    <div class="tuyin">
+      <span class="title">Localización</span>
+      <div class="plan-name"></div>
+        <div class="text">
+          <agm-map [latitude]="lat" [longitude]="lng" [zoom]= "10">
+          <!--<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>-->
+            <agm-marker *ngFor="let lugar of lugares" [latitude]="lugar.lat" [longitude]="lugar.lng"></agm-marker>
+          </agm-map>
         </div>
-        <div class="col-md-4">
-          <a class="btn btn-primary" routerLink="/crear/new" id ="btn-crear">Crear Nuevo Negocio</a>
-        </div>
-      </div>
-      <br />
-      <div class="col-md-8">
-      <ul class="list-group">
-        <ng-container *ngFor="let lugar of lugares">
-          <a routerLink="/crear/{{lugar.id}}"> <!--[queryParams]="{action:'edit',referer:'google'}">-->
-            <li class="list-group-item" *ngIf="lugar.active" >{{lugar.nombre}}</li>
-          </a>
-        </ng-container>
-      </ul>
-      </div>
     </div>
-    <div class="col-md-4">
-      <h2>Destacados</h2>
+  <hr />
+    <div class="row">
+      <div class="col-md-8" id="container">
+        <div class="col-md-12" id="container">
+          <div class="col-md-4">
+            <a class="btn btn-primary" routerLink="/crear/new" id ="btn-crear">Crear Nuevo Negocio</a>
+          </div>
+        </div>
+        <br />
+        <div class="col-md-8">
+          <div class="menu">
+            <span class="title">Lugares Cercanos</span>
+             <div class="plan-name"></div>
+               <div class="text">
+                <ul class="list-group">
+                  <ng-container *ngFor="let lugar of lugares">
+                    <a routerLink="/crear/{{lugar.id}}"> <!--[queryParams]="{action:'edit',referer:'google'}">-->
+                      <li class="list-group-item" *ngIf="lugar.active" >{{lugar.nombre}}</li>
+                    </a>
+                  </ng-container>
+                </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
