--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,13 @@
         <li routerlinkActive><a routerLink="/lugares">Inicio <span class="sr-only">(current)</span></a></li>
         <li routerlinkActive><a routerLink="/contacto">Contacto</a></li>
       </ul>
+      <ul class="nav navbar-nav navbar-right" *ngIf="!loggeIn">
+        <li><a routerLink="/login">Login</a></li>
+        <li><a routerLink="/registro">Registro</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right" *ngIf="loggeIn">
+        <li><a (click)="logout()">Logout</a></li>
+      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
