--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
         <li><a routerLink="/registro">Registro</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" *ngIf="loggeIn">
+        <li><a *ngIf="loggedUser">{{loggedUser}}</a></li>
         <li><a (click)="logout()">Logout</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
